Fixed Scolling and Layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -174,3 +174,12 @@ nav.main-navbar h1 {
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.06);
   overflow: hidden;
 }
+
+/* Hide scrollbar but keep scrolling */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
